--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 12:49:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTestCase.openApp()[pri:1, instance:MyTests.SecondTestCase@1e730495]">openApp</td> 
-  <td>main@1183888521</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 12:49:46</td>   <td>548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTestCase.doLogin()[pri:2, instance:MyTests.SecondTestCase@1e730495]">doLogin</td> 
-  <td>main@1183888521</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 12:49:46</td>   <td>558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTestCase.closeApp()[pri:3, instance:MyTests.SecondTestCase@1e730495]">closeApp</td> 
-  <td>main@1183888521</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.loginByEmail()[pri:1, instance:MyTests.GroupingTestConcept@7d3a22a9]">loginByEmail</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.loginByFacebook()[pri:2, instance:MyTests.GroupingTestConcept@7d3a22a9]">loginByFacebook</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.loginByTwitter()[pri:3, instance:MyTests.GroupingTestConcept@7d3a22a9]">loginByTwitter</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.signUpByEmail()[pri:4, instance:MyTests.GroupingTestConcept@7d3a22a9]">signUpByEmail</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.signUpByFacebook()[pri:5, instance:MyTests.GroupingTestConcept@7d3a22a9]">signUpByFacebook</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.signUpByTwitter()[pri:6, instance:MyTests.GroupingTestConcept@7d3a22a9]">signUpByTwitter</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>48</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.payment_In_Rupees()[pri:7, instance:MyTests.GroupingTestConcept@7d3a22a9]">payment_In_Rupees</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.payment_In_Dollar()[pri:8, instance:MyTests.GroupingTestConcept@7d3a22a9]">payment_In_Dollar</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.paymentReturnByBank()[pri:9, instance:MyTests.GroupingTestConcept@7d3a22a9]">paymentReturnByBank</td> 
+  <td>main@2041605291</td>   <td></td> </tr>
 </table>
