--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 18:41:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionsConcept.soft_assertions()[pri:0, instance:MyTests.AssertionsConcept@7995092a]">soft_assertions</td> 
-  <td>main@1219161283</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 18:41:48</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionsConcept.test()[pri:0, instance:MyTests.AssertionsConcept@7995092a]">test</td> 
-  <td>main@1219161283</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>22/03/31 12:26:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:2, instance:ExtentReports.LoginTest@4efac082]">testLogin</td> 
+  <td>main@1529115495</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>22/03/31 12:26:17</td>   <td>7312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogout()[pri:3, instance:ExtentReports.LoginTest@4efac082]">testLogout</td> 
+  <td>main@1529115495</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>22/03/31 12:26:10</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogo()[pri:1, instance:ExtentReports.LoginTest@4efac082]">testLogo</td> 
+  <td>main@1529115495</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>22/03/31 12:26:27</td>   <td>17372</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:ExtentReports.LoginTest@4efac082]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1529115495</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>22/03/31 12:26:05</td>   <td>-4665</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:ExtentReports.LoginTest@4efac082]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1529115495</td>   <td></td> </tr>
 </table>
