--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,59 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>MyTests.GroupingTestConcept</td>
+<td>ExtentReports.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginByTwitter</td>
-<td>sanity </td>
-</tr>
+<td>testLogout</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>signUpByEmail</td>
-<td>regression sanity </td>
-</tr>
+<td>testLogo</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginByEmail</td>
-<td>regression sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>signUpByTwitter</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>paymentReturnByBank</td>
-<td>regression sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>payment_In_Rupees</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>payment_In_Dollar</td>
-<td>sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginByFacebook</td>
-<td>sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>signUpByFacebook</td>
-<td>regression </td>
-</tr>
+<td>testLogin</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -66,4 +37,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 </table>
