--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.loginByEmail()[pri:1, instance:MyTests.GroupingTestConcept@7d3a22a9]">loginByEmail</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.loginByFacebook()[pri:2, instance:MyTests.GroupingTestConcept@7d3a22a9]">loginByFacebook</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.loginByTwitter()[pri:3, instance:MyTests.GroupingTestConcept@7d3a22a9]">loginByTwitter</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.paymentReturnByBank()[pri:9, instance:MyTests.GroupingTestConcept@7d3a22a9]">paymentReturnByBank</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.payment_In_Dollar()[pri:8, instance:MyTests.GroupingTestConcept@7d3a22a9]">payment_In_Dollar</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>48</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.payment_In_Rupees()[pri:7, instance:MyTests.GroupingTestConcept@7d3a22a9]">payment_In_Rupees</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.signUpByEmail()[pri:4, instance:MyTests.GroupingTestConcept@7d3a22a9]">signUpByEmail</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.signUpByFacebook()[pri:5, instance:MyTests.GroupingTestConcept@7d3a22a9]">signUpByFacebook</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>22/03/30 17:56:18</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestConcept.signUpByTwitter()[pri:6, instance:MyTests.GroupingTestConcept@7d3a22a9]">signUpByTwitter</td> 
-  <td>main@2041605291</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>22/03/31 12:30:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:ExtentReports.LoginTest@6bd61f98]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@564272228</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>22/03/31 12:31:05</td>   <td>22070</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:ExtentReports.LoginTest@6bd61f98]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@564272228</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>22/03/31 12:30:48</td>   <td>4829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:2, instance:ExtentReports.LoginTest@6bd61f98]">testLogin</td> 
+  <td>main@564272228</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>22/03/31 12:30:47</td>   <td>4767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogo()[pri:1, instance:ExtentReports.LoginTest@6bd61f98]">testLogo</td> 
+  <td>main@564272228</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>22/03/31 12:30:55</td>   <td>12034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogout()[pri:3, instance:ExtentReports.LoginTest@6bd61f98]">testLogout</td> 
+  <td>main@564272228</td>   <td></td> </tr>
 </table>
