--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bd0de">  <td>22/03/31 12:26:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:ExtentReports.LoginTest@4efac082]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1529115495</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>22/03/31 12:26:27</td>   <td>22037</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:ExtentReports.LoginTest@4efac082]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1529115495</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>22/03/31 12:26:10</td>   <td>4665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin()[pri:2, instance:ExtentReports.LoginTest@4efac082]">testLogin</td> 
-  <td>main@1529115495</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>22/03/31 12:26:10</td>   <td>4607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogo()[pri:1, instance:ExtentReports.LoginTest@4efac082]">testLogo</td> 
-  <td>main@1529115495</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>22/03/31 12:26:17</td>   <td>11977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogout()[pri:3, instance:ExtentReports.LoginTest@4efac082]">testLogout</td> 
-  <td>main@1529115495</td>   <td></td> </tr>
+<tr bgcolor="c9af63">  <td>22/03/31 17:15:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Log4JLogging.setup()[pri:0, instance:Log4j.Log4JLogging@29215f06]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384515747</td>   <td></td> </tr>
+<tr bgcolor="c9af63">  <td>22/03/31 17:15:32</td>   <td>8402</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Log4JLogging.tearDown()[pri:0, instance:Log4j.Log4JLogging@29215f06]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384515747</td>   <td></td> </tr>
+<tr bgcolor="c9af63">  <td>22/03/31 17:15:29</td>   <td>5130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Log4JLogging.testRegistration()[pri:0, instance:Log4j.Log4JLogging@29215f06]">testRegistration</td> 
+  <td>main@384515747</td>   <td></td> </tr>
 </table>
