--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f0f1be">  <td>22/04/01 12:35:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPagePFTest.loginTest()[pri:2, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">loginTest</td> 
-  <td>main@1524960486</td>   <td></td> </tr>
-<tr bgcolor="f0f1be">  <td>22/04/01 12:35:18</td>   <td>-9142</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPagePFTest.setUp()[pri:0, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1524960486</td>   <td></td> </tr>
-<tr bgcolor="f0f1be">  <td>22/04/01 12:35:37</td>   <td>9552</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPagePFTest.tearDown()[pri:0, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1524960486</td>   <td></td> </tr>
-<tr bgcolor="f0f1be">  <td>22/04/01 12:35:27</td>   <td>-48</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPagePFTest.verify_ImageTest()[pri:1, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">verify_ImageTest</td> 
-  <td>main@1524960486</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationsAllConcept.AfterTest()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&lt;&lt;AfterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsAllConcept.afterClass()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsAllConcept.afterMethod()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsAllConcept.afterMethod()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsAllConcept.afterMethod()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsAllConcept.beforeClass()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsAllConcept.beforeMethod()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsAllConcept.beforeMethod()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsAllConcept.beforeMethod()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-53</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationsAllConcept.beforeTest()[pri:0, instance:MyTests.AnnotationsAllConcept@12aba8be]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsAllConcept.test1()[pri:1, instance:MyTests.AnnotationsAllConcept@12aba8be]">test1</td> 
+  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsAllConcept.test2()[pri:2, instance:MyTests.AnnotationsAllConcept@12aba8be]">test2</td> 
+  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="d07cbb">  <td>22/12/21 21:03:13</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsAllConcept.test3()[pri:3, instance:MyTests.AnnotationsAllConcept@12aba8be]">test3</td> 
+  <td>main@658532887</td>   <td></td> </tr>
 </table>
